# farsh

./: .gitignore  BoneAnimation.cpp  BoneAnimation.hpp  CMakeLists.txt  Character.cpp  Character.hpp  Game.cpp  Game.hpp  Geometry.cpp  Geometry.hpp  GeometryFormats.cpp  GeometryFormats.hpp  Material.cpp  Material.hpp  Painter.cpp  Painter.hpp  ShaderCache.cpp  ShaderCache.hpp  Skeleton.cpp  Skeleton.hpp  axe.ba  axe.geo.indices  axe.geo.vertices  circular.ba  circular.geo.indices  circular.geo.vertices  compile.bat  configure.js  farsh.html  farsh.js  general.hpp  hero.ba  labyrint.txt  main.cpp  main.lua  meta.cpp  mnogobukov.font  og.ba  og.geo.indices  og.geo.vertices  (+13 more)
assets/: axe.ba  axe.geo.indices  axe.geo.vertices  bench.geo.indices  bench.geo.vertices  circular.ba  circular.geo.vertices  knot.geo.indices  knot.geo.vertices  labyrint.txt  main.lua  mnogobukov.font  nescafe.geo.indices  nescafe.geo.vertices  z6.tskin  zombie.geo.indices  zombie.geo.vertices
ems/: package.json  server.js
ems/site/: farsh.html
